--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -3,12 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>v-if</title>
 </head>
 <body>
+<div id="app">
+</div>
 <script src="https://cdn.bootcss.com/vue/2.6.11/vue.js"></script>
 <script>
-  
+  const app = new Vue({
+    el:'#app',
+    data:{
+      message:'hello',
+    },
+    methods:{
+
+    },
+    })
 </script>
 </body>
 </html>
