--- a/vue.html
+++ b/vue.html
@@ -8,12 +8,13 @@
 <title>视频管理</title>
 </head>
 <body>
-
-
- 
-
-   
 <div class="panel panel-default" id='app'>
+  <div class="form-check">
+    <label class="form-check-label">
+      <input type="checkbox" class="form-check-input" name="" id="" value="checkedValue" checked>
+      Display value
+    </label>
+  </div>
     <div class="panel-heading">
         <h3 class="panel-title">视频管理</h3>
     </div>
